fix x button  on mobile

--- a/src/styles/sass/_global.scss
+++ b/src/styles/sass/_global.scss
@@ -1036,6 +1036,7 @@ body {
         border: none;
         color: $white;
         font-size: 21px;
+        padding: 0;
         cursor: pointer;
         animation: glowingBlue 4s infinite alternate;
 
